Add store intermediate results endpoint
